# bytetrack-yolo11-ncnn

./: CMakeLists.txt  README.md
assets/yolo11n_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
ncnn/include/ncnn/: platform.h
ncnn/lib/cmake/ncnn/: ncnn-debug.cmake  ncnn.cmake
ncnn/lib/pkgconfig/: ncnn.pc
src/: common.cpp  common.h  mmcls.cpp  mmcls.h  task.cpp  task.h  yolo11.cpp  yolo11.h
src/byte_track/: BYTETracker.cpp  BYTETracker.h  STrack.cpp  STrack.h  dataType.h  kalmanFilter.cpp  kalmanFilter.h  lapjv.cpp  lapjv.h  utils.cpp
test/: CMakeLists.txt  main.cpp
